[tool.poetry]
name = "util-python"
version = "0.1.0"
description = ""
authors = ["nakamura <fllovfgv@gmail.com>"]
readme = "README.md"
packages = [{include = "app_util_genaiwk"}]

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
